tests/baselines/reference/genericFunduleInModule2.errors.txt
tests/cases/compiler/genericFunduleInModule2.ts(11,8): error TS2305: Module 'A' has no exported member 'B'.


==== tests/cases/compiler/genericFunduleInModule2.ts (1 errors) ====
    module A {
        export function B<T>(x: T) { return x; }
    }
    
    module A {
        export module B {
            export var x = 1;
        }
    }
    
    var b: A.B;
           ~~~
!!! error TS2305: Module 'A' has no exported member 'B'.
    A.B(1);